fix: add team points on event verification
- Fixed issue where team points were not added during event verification
- Updated AdminService.verifyEvent to award points to all associated teams
- Now, when verifying an event through the admin panel, the specified points are properly added to each linked team
- Ensures verified events affect team leaderboard rankings